Instanced Collections Don't Honor Viewport Display Setting #61152

Closed
opened 2019-02-03 08:39:27 +01:00 by Darren L. Waschow · 8 comments

System Information
Operating system: Windows 10
Graphics card: nVidia GForce 560

Blender Version
Broken: Blender 2.8 Beta, Date: 2019-01-31 01:07, Hash 8c89790674
Worked: 2.79b

Short description of error
Instanced collections, both within the active .blend or a linked library, don't display using the correct "Display As" setting in the Viewport Display setting. The instancer empty displays using the selected display setting (Wire, Bounds, etc.) but the object(s) being instanced display as they are in the referenced collection.

Exact steps for others to reproduce the error
Instance a collection from an external .blend or within the active file.
Change the Viewport Display > Display As" to "Bounds" (or other setting).
Note that the instancer empty changes to that mode instead of the objects in the instanced collection.

Collection Instance Not Honoring Viewport Display Setting-.png

**System Information** Operating system: Windows 10 Graphics card: nVidia GForce 560 **Blender Version** Broken: Blender 2.8 Beta, Date: 2019-01-31 01:07, Hash 8c8979067490 Worked: 2.79b **Short description of error** Instanced collections, both within the active .blend or a linked library, don't display using the correct "Display As" setting in the **Viewport Display** setting. The instancer empty displays using the selected display setting (Wire, Bounds, etc.) but the object(s) being instanced display as they are in the referenced collection. **Exact steps for others to reproduce the error** Instance a collection from an external .blend or within the active file. Change the **Viewport Display > Display As"** to **"Bounds"** (or other setting). Note that the instancer empty changes to that mode instead of the objects in the instanced collection. ![Collection Instance Not Honoring Viewport Display Setting-.png](https://archive.blender.org/developer/F6492922/Collection_Instance_Not_Honoring_Viewport_Display_Setting-.png)

Added subscriber: @CivilVisions

Added subscriber: @CivilVisions

#62045 was marked as duplicate of this issue

#62045 was marked as duplicate of this issue

Added subscribers: @brecht, @ZedDB

Added subscribers: @brecht, @ZedDB
Brecht Van Lommel was assigned by Sebastian Parborg 2019-02-04 12:56:22 +01:00

@brecht feel free to reassign if this is not for you.

@brecht feel free to reassign if this is not for you.
Brecht Van Lommel removed their assignment 2019-02-05 18:39:43 +01:00
Clément Foucault was assigned by Brecht Van Lommel 2019-02-05 18:39:43 +01:00

Seems more like a drawing issue to me.

Not sure if this is somehow incompatible with OpenGL instancing, or if we do that at all.

Seems more like a drawing issue to me. Not sure if this is somehow incompatible with OpenGL instancing, or if we do that at all.

Added subscriber: @Vyach

Added subscriber: @Vyach

This issue was referenced by 729a1ab6a0

This issue was referenced by 729a1ab6a0f1f7631a1f1bdb03289a715aa61f72

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61152
No description provided.