Despgraph: Make dupli objects inherit the parent's display type

Fix T61152 Instanced Collections Don't Honor Viewport Display Setting